<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pujaapp.ui.home.HomeFragment"
        android:label="home"
        tools:layout="@layout/frag_home" />
    <fragment android:id="@+id/nav_favorite"
        android:name="com.example.pujaapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/frag_favorite"/>

    <fragment android:id="@+id/nav_account"
        android:name="com.example.pujaapp.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/frag_account"/>

    <fragment android:id="@+id/nav_notes"
        android:name="com.example.pujaapp.ui.notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/frag_notes"/>

</navigation>