<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_elements"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="71dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/search_icon_background"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/colorPrimary" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:layout_constraintVertical_bias="0.009"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <LinearLayout
                    android:id="@+id/layoutGoal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_weight="5"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/source1" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/source"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutCourse"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/course1" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/courses"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <LinearLayout
                    android:id="@+id/layoutContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_weight="5"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/content" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/content"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutSubject"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rectangle_background"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/v_icon" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/video"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="parent"
                        tools:layout_editor_absoluteX="0dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>